--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 		</header>
 		<div id="main_image">
 			<div id="main_image_inner">
-				<h1>キャッチコピー</h1>
+				<h1>ほうむくんの部屋</h1>
 			</div>
 		</div>
 		<main>
 			<section id="section01">
 				<div class="scroll">
-					<h2>テキストテキストテキスト</h2>
+					<h2>ZOZO法務部ほうむくんの部屋へようこそ</h2>
 				</div>
 				<nav>
 					<ul id="main_nav">
-						<li><a href="#div01">1.テキストテキ<br>ストテキスト</a></li>
-						<li><a href="#div03">3.テキストテキ<br>ストテキスト</a></li>
-						<li><a href="#div02">2.テキストテキ<br>ストテキスト</a></li>
+						<li><a href="#div01">1.ほうむくんとは<br>自己紹介</a></li>
+						<li><a href="#div03">3.ほうむくんが<br>やれること</a></li>
+						<li><a href="#div02">2.ほうむくんの<br>友達</a></li>
 					</ul>
 				</nav>
 				<div class="contents" id="div01">
