--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<div id="header_inner">
 				<div id="header_logo">
-					<img src="https://d2l930y2yx77uc.cloudfront.net/production/uploads/images/6432837/picture_pc_9a06a019fe451a6c54a064d465d927c5.jpg">
+					<img src="https://assets.st-note.com/production/uploads/images/28674410/rectangle_large_type_2_5bf739f3f3ece2d7ca77515b798a2510.jpg?fit=bounds&quality=60&width=1280">
 				</div>
 				<div id="header_contact">
 					<a href="#" id="header_contact_inner">
