--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 					<div class="left" id="photo01">
 					</div>
 					<div class="right text">
-						<h4>1.テキストテキストテキストテキスト</h4>
-						<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+						<h4>1.ほうむくんとは</h4>
+						<p>ZOZOのSlackアプリです。ビーグル犬ですが、丸くて小さいです。</p>
 					</div>
 				</div>
 				<div class="contents" id="div02">
 					<div class="left text">
-						<h4>2.テキストテキストテキストテキスト</h4>
-						<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+						<h4>2.ほうむくんがやれること</h4>
+						<p>ZOZOの法律相談に何でも答えます。外部の弁護士の助けを借りることもあります。</p>
 					</div>
 					<div class="right" id="photo02">
 					</div>
@@ -60,7 +60,7 @@
 					<div class="left" id="photo03">
 					</div>
 					<div class="right text">
-						<h4>3.テキストテキストテキストテキスト</h4>
+						<h4>3.ほうむくんの</h4>
 						<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 					</div>
 				</div>
