--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="contents" id="div02">
 					<div class="left text">
 						<h4>2.ほうむくんがやれること</h4>
-						<p>ZOZOの法律相談に何でも答えます。外部の弁護士の助けを借りることもあります。</p>
+						<p>ZOZOの法律相談に何でも答えます。外部の助けを借りることもあります。</p>
 					</div>
 					<div class="right" id="photo02">
 					</div>
@@ -60,8 +60,8 @@
 					<div class="left" id="photo03">
 					</div>
 					<div class="right text">
-						<h4>3.ほうむくんの</h4>
-						<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+						<h4>3.ほうむくんの友達</h4>
+						<p>ほうむちゃん、そうむくん、犬フレンド<p>
 					</div>
 				</div>
 				<div class="main_contact">
