--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 				<nav>
 					<ul id="main_nav">
 						<li><a href="#div01">1.ほうむくんとは<br>自己紹介</a></li>
-						<li><a href="#div03">3.ほうむくんが<br>やれること</a></li>
-						<li><a href="#div02">2.ほうむくんの<br>友達</a></li>
+						<li><a href="#div03">3.ほうむくんの<br>中の人</a></li>
+						<li><a href="#div02">2.ほうむくんが<br>やれること</a></li>
 					</ul>
 				</nav>
 				<div class="contents" id="div01">
@@ -50,7 +50,7 @@
 				</div>
 				<div class="contents" id="div02">
 					<div class="left text">
-						<h4>2.ほうむくんの友達</h4>
+						<h4>2.ほうむくんがやれること</h4>
 						<p>ZOZOの法律相談に何でも答えます。外部の助けを借りることもあります。</p>
 					</div>
 					<div class="right" id="photo02">
@@ -60,8 +60,8 @@
 					<div class="left" id="photo03">
 					</div>
 					<div class="right text">
-						<h4>3.ほうむくんがやれること</h4>
-						<p>ほうむちゃん、そうむくん、犬フレンド<p>
+						<h4>3.ほうむくんの中の人</h4>
+						<p>采木俊憲 (Toshinori Uneki)プログラミング学習中<p>
 					</div>
 				</div>
 				<div class="main_contact">
