--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="contents" id="div02">
 					<div class="left text">
 						<h4>2.ほうむくんがやれること</h4>
-						<p>ZOZOの法律相談に何でも答えます。外部の助けを借りることもあります。</p>
+						<p>ZOZOの法律相談に何でも答えます。景表法、データ・プライバシー法、新規事業ローンチ、海外M&A等様々です。</p>
 					</div>
 					<div class="right" id="photo02">
 					</div>
@@ -67,20 +67,20 @@
 				<div class="main_contact">
 					<div class="contact_left main_contact_inner">
 						<div class="contact_left_inner">
-							<p>TEL 00-0000-0000<br>
-							<span>(受付時間 平日 9:00～17:00)</span></p>
+							<p>TEL 03-1111-1111<br>
+							<span>(受付時間 平日 9:00～18:00)</span></p>
 						</div>
 					</div>
 					<div class="contact_right main_contact_inner">
 						<a href="#" class="contact_right_inner">
-							<p>問い合わせボタン</p>
+							<p>お問い合わせはこちら</p>
 						</a>
 					</div>
 				</div>
 			</section>
 		</main>
 		<footer>
-			<p>&copy; samplesamplesamplesamplesample</p>
+			<p>&copy; Houmu-kun & Co.</p>
 		</footer>
 	</div>
 </body>
