--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</div>
 					<div class="right text">
 						<h4>1.ほうむくんとは</h4>
-						<p>ZOZOのSlackアプリです。ビーグル犬ですが、丸くて小さいです。</p>
+						<p>ZOZOのSlackアプリです。ビーグル犬ですが、丸くて小さいです。勉強は得意ですが運動神経はぼちぼちです。スマホを手放しません。どうぶつ小学校3年1組</p>
 					</div>
 				</div>
 				<div class="contents" id="div02">
