--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
 					</div>
 					<div class="right text">
 						<h4>1.ほうむくんとは</h4>
-						<p>ZOZOのSlackアプリです。ビーグル犬ですが、丸くて小さいです。勉強は得意ですが運動神経はぼちぼちです。スマホを手放しません。どうぶつ小学校3年1組</p>
+						<p>ZOZOのSlackアプリです。</p>
+						<p>相談窓口の一本化・迅速対応・ナレッジ共有を実現するため、メールとSlackを組み合わせたアプリを社内開発しました。</p>
+						<p>ほうむくんはビーグル犬です（一応）。得意技はスマホでのリサーチです。</p>
 					</div>
 				</div>
 				<div class="contents" id="div02">
 					<div class="left text">
 						<h4>2.ほうむくんがやれること</h4>
-						<p>ZOZOの法律相談に何でも答えます。景表法、データ・プライバシー法、新規事業ローンチ、海外M&A等様々です。</p>
+						<p>ZOZO法務部に届く法律相談に何でも対応します。</p>
+						<p>商標・特許は知財部で対応します。</p>
 					</div>
 					<div class="right" id="photo02">
 					</div>
@@ -61,7 +64,9 @@
 					</div>
 					<div class="right text">
 						<h4>3.ほうむくんの中の人</h4>
-						<p>采木俊憲 (Toshinori Uneki)プログラミング学習中<p>
+						<p>采木俊憲 (Toshinori Uneki)</p>
+						<p>弁護士。法律事務所・米国ジョージタウン大学(Washington D.C.)ロースクール等を経て、2018年にZOZO入社</p>
+						<p>英語での業務可。プログラミングと中国語を勉強中です</p>
 					</div>
 				</div>
 				<div class="main_contact">
