--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					</div>
 					<div class="right text">
 						<h4>3.ほうむくんの中の人</h4>
-						<p>采木俊憲 (Toshinori Uneki)</p>
+						<p>采木俊憲 (Toshinori Uneki)＋6名</p>
 						<p>弁護士。法律事務所・米国ジョージタウン大学 (Washington D.C.) ロースクール等を経て、2018年にZOZO入社</p>
 						<p>英語での業務可。プログラミングと中国語を勉強中です</p>
 					</div>
