--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 					<div class="contact_right main_contact_inner">
 						<a href="#" class="contact_right_inner">
 							<p>お問い合わせはこちら</p>
+							<p>（一番上に戻る）</p>
 						</a>
 					</div>
 				</div>
