--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 		</header>
 		<div id="main_image">
 			<div id="main_image_inner">
-				<h1>ほうむくん</h1>
-				<h1>の部屋</h1>
+				<h1>ほうむくんの部屋</h1>
 			</div>
 		</div>
 		<main>
