--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 					<div class="right text">
 						<h4>1.ほうむくんとは</h4>
 						<p>ZOZOのSlackアプリです。</p>
-						<p>相談窓口の一本化・迅速対応・ナレッジ共有を実現するため、メールとSlackを組み合わせたアプリを社内開発しました。</p>
+						<p>ZOZO法務部の相談窓口の一本化・迅速対応・ナレッジ共有を実現するため、メールとSlackを組み合わせたアプリを社内開発しました。</p>
 						<p>ほうむくんはビーグル犬です（一応）。得意技はスマホでのリサーチです。</p>
 					</div>
 				</div>
 				<div class="contents" id="div02">
 					<div class="left text">
 						<h4>2.ほうむくんがやれること</h4>
-						<p>ZOZO法務部に届く法律相談に何でも対応します。</p>
+						<p>ZOZO法務部に届く法律相談に何でも対応します。ブランド出店、キャンペーン、CS、新規事業、その他色々</p>
 						<p>商標・特許は知財部で対応します。</p>
 					</div>
 					<div class="right" id="photo02">
