--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 					<div class="left" id="photo01">
 					</div>
 					<div class="right text">
-						<h4>1.ほうむくんとは</h4>
+						<h2>1. ほうむくんとは</h2>
 						<p>ZOZOのSlackアプリです。</p>
-						<p>ZOZO法務部の相談窓口の一本化・迅速対応・ナレッジ共有を実現するため、メールとSlackを組み合わせたアプリを社内開発しました。</p>
+						<p>法務部の相談窓口の一本化・迅速対応・ナレッジ共有を実現するため、メールとSlackを組み合わせたアプリを社内開発しました。</p>
 						<p>ほうむくんはビーグル犬です（一応）。得意技はスマホでのリサーチです。</p>
 					</div>
 				</div>
 				<div class="contents" id="div02">
 					<div class="left text">
-						<h4>2.ほうむくんがやれること</h4>
-						<p>ZOZO法務部に届く法律相談に何でも対応します。ブランド出店、キャンペーン、CS、新規事業、その他色々</p>
+						<h2>2. ほうむくんがやれること</h2>
+						<p>Slackアプリを通じた法律相談に何でも対応します。ブランド出店、キャンペーン、CS、新規事業、その他色々</p>
 						<p>商標・特許は知財部で対応します。</p>
 					</div>
 					<div class="right" id="photo02">
@@ -63,9 +63,10 @@
 					<div class="left" id="photo03">
 					</div>
 					<div class="right text">
-						<h4>3.ほうむくんの中の人</h4>
-						<p>采木俊憲 (Toshinori Uneki)＋6名</p>
-						<p>弁護士。法律事務所・米国ジョージタウン大学 (Washington D.C.) ロースクール等を経て、2018年にZOZO入社</p>
+						<h2>3. ほうむくんの中の人</h2>
+						<p>采木俊憲 (Toshinori Uneki)＋法務部メンバー</p>
+						<p>弁護士。法律事務所・米国ジョージタウン大学ロースクール等を経て、2018年にZOZO入社</p>
+						<p>https://www.toshinori-uneki.com/</p>
 						<p>英語での業務可。プログラミングと中国語を勉強中です</p>
 					</div>
 				</div>
