--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 					<div class="left text">
 						<h2>2. ほうむくんがやれること</h2>
 						<p>Slackアプリを通じた法律相談に何でも対応します。ブランド出店、キャンペーン、CS、新規事業、その他色々</p>
+						<p>Slackで相談すると法務部全員に通知が飛び、メール対応することで情報共有・外部連携・ナレッジ蓄積をスムーズに行うことができ、将来のチャットツール変更にも影響されません。</p>
 						<p>商標・特許は知財部で対応します。</p>
 					</div>
 					<div class="right" id="photo02">
@@ -66,7 +67,7 @@
 						<h2>3. ほうむくんの中の人</h2>
 						<p>采木俊憲 (Toshinori Uneki)＋法務部メンバー</p>
 						<p>弁護士。法律事務所・米国ジョージタウン大学ロースクール等を経て、2018年にZOZO入社</p>
-						<p>https://www.toshinori-uneki.com/</p>
+						<p><a title="個人サイト" href="https://www.toshinori-uneki.com/">ここをクリックすると飛びます。</a></p>
 						<p>英語での業務可。プログラミングと中国語を勉強中です</p>
 					</div>
 				</div>
