--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<h2>3. ほうむくんの中の人</h2>
 						<p>采木俊憲 (Toshinori Uneki)＋法務部メンバー</p>
 						<p>弁護士。法律事務所・米国ジョージタウン大学ロースクール等を経て、2018年にZOZO入社</p>
-						<p><a title="個人サイト" href="https://www.toshinori-uneki.com/">ここをクリックすると飛びます。</a></p>
+						<p><a title="采木俊憲個人サイト" href="https://www.toshinori-uneki.com/">個人サイトはこちら</a></p>
 						<p>英語での業務可。プログラミングと中国語を勉強中です</p>
 					</div>
 				</div>
