--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		
 		<!-- テスト中 -->
 			<p>（作成中）</p>
-			<p class="lead-form">ご予約はこちらから！</p>
+			<p class="lead-form">ご連絡はこちらから</p>
 			<form>
 			  <div class="item">
 			    <label class="label">お名前</label>
@@ -106,19 +106,19 @@
 			  <div class="item">
 			    <p class="label">予約メニュー</p>
 			    <div class="inputs">
-			    <input id="cut" type="radio" name="menu" value="cut"><label for="cut">カット</label>
-			    <input id="cut-color" type="radio" name="menu" value="cut-color"><label for="cut-color">カット+カラー</label>
-			    <input id="headspa" type="radio" name="menu" value="headspa"><label for="headspa">ヘッドスパ</label>
+			    <input id="cut" type="radio" name="menu" value="cut"><label for="cut">法律相談</label>
+			    <input id="cut-color" type="radio" name="menu" value="cut-color"><label for="cut-color">講演・執筆</label>
+			    <input id="headspa" type="radio" name="menu" value="headspa"><label for="headspa">その他</label>
 			    </div>
 			  </div>
 
 			  <div class="item">
-			    <label class="label">ご意見</label>
+			    <label class="label">内容を教えて下さい</label>
 			    <textarea class="inputs"></textarea>
 			  </div>
 
 			  <div class="btn-area">
-			    <input type="submit" value="予約する"><input type="reset" value="リセット">
+			    <input type="submit" value="送信する"><input type="reset" value="リセット">
 			  </div>
 			</form>
 		<!-- テスト中 -->
