--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					</div>
 					<div class="contact_right main_contact_inner">
 						<a href="#" class="contact_right_inner">
-							<p>お問い合わせはこちら</p>					
+							<p>一番上に戻る</p>					
 							
 						</a>
 					</div>
@@ -118,7 +118,7 @@
 			  </div>
 
 			  <div class="btn-area">
-			    <input type="submit" value="送信する"><input type="reset" value="リセット">
+			    <input type="submit" value="[送信する]"><input type="reset" value="リセット">
 			  </div>
 			</form>
 		<!-- テスト中 -->
