--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
 						<h2>2. ほうむくんがやれること</h2>
 						<p>Slackアプリを通じた法律相談に何でも対応します。ブランド出店、キャンペーン、CS、新規事業、その他色々</p>
 						<p>Slackで相談すると法務部全員に通知が飛び、メール対応することで<br>情報共有・外部連携・ナレッジ蓄積をスムーズに行うことができ、将来のチャットツール変更にも影響されません。</p>
-						<p>商標・特許は知財部で対応します。</p>
+						<p>商標・特許は知的財産部で対応します。</p>
 						
 						
 						<!-- テスト中 -->
-						<ol>
+						<p>【テスト中】</p>
+						<ol type="1">
 						  <li>Slackアプリを通じた法律相談に何でも対応します。ブランド出店、キャンペーン、CS、新規事業、その他色々</li>
 						  <li>Slackで相談すると法務部全員に通知が飛び、メール対応することで情報共有・外部連携・ナレッジ蓄積をスムーズに行うことができ、将来のチャットツール変更にも影響されません。</li>
 						  <li>商標・特許は知財部で対応します。</li>
