--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 						<h2>3. ほうむくんの中の人</h2>
 						<p>采木俊憲 (Toshinori Uneki)＋法務部メンバー</p>
 						<p>弁護士。法律事務所・米国ジョージタウン大学ロースクール等を経て、2018年にZOZO入社</p>
-						<p><a title="采木俊憲個人サイト" href="https://www.toshinori-uneki.com/">個人サイトはこちら</a></p>
-						<p><a title="采木俊憲LinkedIn" href="https://www.linkedin.com/in/toshinori-toshi-uneki-%E9%87%87%E6%9C%A8%E4%BF%8A%E6%86%B2-00914bb/">個人LinkedInはこちら</a></p>
+						<p>個人サイトはこちら</p><p><a title="采木俊憲個人サイト" href="https://www.toshinori-uneki.com/">リンク</a></p>
+						<p>個人LinkedInはこちら</p><p><a title="采木俊憲LinkedIn" href="https://www.linkedin.com/in/toshinori-toshi-uneki-%E9%87%87%E6%9C%A8%E4%BF%8A%E6%86%B2-00914bb/">リンク</a></p>
 						<p>英語での業務可。プログラミングと中国語を勉強中です</p>
 					</div>
 				</div>
